fix: shrink background image in request section, change footer behavior on mobile devices

--- a/source/scss/blocks/footer.scss
+++ b/source/scss/blocks/footer.scss
@@ -52,8 +52,9 @@
   }
 
   @media (max-width: $medium) {
-    flex-direction: column;
     margin: auto;
+    padding-right: 15px;
+    padding-left: 15px;
   }
 }
 
