--- a/source/scss/blocks/page.scss
+++ b/source/scss/blocks/page.scss
@@ -41,6 +41,7 @@
   &--footer {
     @media (max-width: $medium) {
       padding: 0;
+      max-width: 575px;
     }
   }
 }
